--- a/index.html
+++ b/index.html
@@ -1,88 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Open in App</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 40px;
-      background: #f5f5f5;
-      color: #333;
-    }
-    h1 {
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 16px;
-      margin-bottom: 30px;
-    }
-    .btn-container {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      max-width: 300px;
-      margin: 0 auto;
-    }
-    .btn {
-      display: inline-block;
-      padding: 15px;
-      border-radius: 8px;
-      font-size: 16px;
-      font-weight: bold;
-      color: white;
-      text-decoration: none;
-      transition: background 0.3s ease;
-    }
-    .btn-ios {
-      background-color: #0070c9;
-    }
-    .btn-ios:hover {
-      background-color: #005fa3;
-    }
-    .btn-android {
-      background-color: #3ddc84;
-    }
-    .btn-android:hover {
-      background-color: #2bb56b;
-    }
-    .btn-amazon {
-      background-color: #ff9900;
-    }
-    .btn-amazon:hover {
-      background-color: #e68a00;
-    }
-  </style>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Open SVS App</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        padding: 40px;
+        background: #f5f5f5;
+        color: #333;
+      }
+      h1 {
+        margin-bottom: 20px;
+      }
+      p {
+        font-size: 16px;
+        margin-bottom: 30px;
+      }
+      .btn-container {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        max-width: 300px;
+        margin: 0 auto;
+      }
+      .btn {
+        display: inline-block;
+        padding: 15px;
+        border-radius: 8px;
+        font-size: 16px;
+        font-weight: bold;
+        color: white;
+        text-decoration: none;
+        transition: background 0.3s ease;
+      }
+      .btn-ios {
+        background-color: #0070c9;
+      }
+      .btn-ios:hover {
+        background-color: #005fa3;
+      }
+      .btn-android {
+        background-color: #3ddc84;
+      }
+      .btn-android:hover {
+        background-color: #2bb56b;
+      }
+      .btn-amazon {
+        background-color: #ff9900;
+      }
+      .btn-amazon:hover {
+        background-color: #e68a00;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Open SVS App</h1>
+    <p>If the app is not installed, choose your store below:</p>
 
-  <h1>Open SVS 17U</h1>
-  <p>If the app is not installed, choose your store below:</p>
+    <div class="btn-container">
+      <a href="https://apps.apple.com/app/id1148462104" class="btn btn-ios"
+        >Download on the App Store</a
+      >
+      <a
+        href="https://play.google.com/store/apps/details?id=com.svsound.svs"
+        class="btn btn-android"
+        >Get it on Google Play</a
+      >
+      <a
+        href="https://www.amazon.com/gp/mas/dl/android?p=com.svsound.svs"
+        class="btn btn-amazon"
+        >Get it from Amazon Appstore</a
+      >
+    </div>
 
-  <div class="btn-container">
-    <a href="https://apps.apple.com/app/id1148462104" class="btn btn-ios">Download on the App Store</a>
-    <a href="https://play.google.com/store/apps/details?id=com.svsound.svs" class="btn btn-android">Get it on Google Play</a>
-    <a href="https://www.amazon.com/gp/mas/dl/android?p=com.svsound.svs" class="btn btn-amazon">Get it from Amazon Appstore</a>
-  </div>
+    <script>
+      const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+      const iosScheme = "svsuat://open"; // Your custom scheme or universal link
+			const androidIntent = "intent://open#Intent;scheme=svsuat;package=com.svsound.svs.ota;end";
 
-  <script>
-    const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-    const appLink = "svsuat://open"; // Your custom scheme or universal link
+      function isAndroid() {
+        return /android/i.test(navigator.userAgent);
+      }
 
-    function openApp() {
-      const now = Date.now();
-      window.location = appLink;
-      setTimeout(function() {
-        if (Date.now() - now < 2000) {
-          console.log("App not installed, showing store options.");
-        }
-      }, 1500);
-    }
+      function isIOS() {
+        return /iphone|ipad|ipod/i.test(navigator.userAgent);
+      }
 
-    openApp();
-  </script>
+      function openApp() {
+        const now = Date.now();
+				if (isIOS()) {
+					// For iOS, use the custom scheme or universal link
+					window.location = iosScheme;
+				} else if (isAndroid()) {
+					// For Android, use the intent URL
+					window.location = androidIntent;
+				} else {
+					console.log("Unsupported platform");
+					return;
+				}
+        setTimeout(function () {
+          if (Date.now() - now < 2000) {
+            console.log("App not installed, showing store options.");
+          }
+        }, 1500);
+      }
 
-</body>
+      openApp();
+    </script>
+  </body>
 </html>
