--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					window.location = iosScheme;
 				} else if (isAndroid()) {
 					// For Android, use the intent URL
-					window.location = androidIntent;
+					window.location = iosScheme;
 				} else {
 					console.log("Unsupported platform");
 					return;
